fix jump link z index scrolling bug

--- a/web-components/jump-links/jump-links.css
+++ b/web-components/jump-links/jump-links.css
@@ -1,84 +1,89 @@
-a, ul, li {
-    font-family: "ibm-plex-sans", "Helvetica Neue", Arial, sans-serif;
-    color: black;
-    font-size: var(--plex-18);
+a,
+ul,
+li {
+  font-family: "ibm-plex-sans", "Helvetica Neue", Arial, sans-serif;
+  color: black;
+  font-size: var(--plex-18);
 }
 
-a, ul, li {
-    margin: 0;
-    padding: 0;
+a,
+ul,
+li {
+  margin: 0;
+  padding: 0;
 }
 
 .jump-links {
-    padding: 1em 5em 0em 5em;
-    position: sticky;
-    top: 3em;
-    border-bottom: solid lightgray;
-    background-color: white;
-    color: black;
+  padding: 1em 5em 0em 5em;
+  position: sticky;
+  top: 3em;
+  border-bottom: solid lightgray;
+  background-color: white;
+  color: black;
+  z-index: 10;
 }
 
 .jump-links ul {
-    display: flex;
-    flex-flow: row wrap;
-    column-gap: 3em;
-    row-gap: 0;
-    padding: 0;
-    line-height: 3em;
+  display: flex;
+  flex-flow: row wrap;
+  column-gap: 3em;
+  row-gap: 0;
+  padding: 0;
+  line-height: 3em;
 }
 
 .jump-links li {
-    font-weight: 500;
-    font-size: 0.9em;
-    padding: 0;
-    border-bottom: white solid 4px;
-    display: flex !important;
-    flex-flow: row nowrap;
-    align-items: center;
-    gap: 0.5em;
+  font-weight: 500;
+  font-size: 0.9em;
+  padding: 0;
+  border-bottom: white solid 4px;
+  display: flex !important;
+  flex-flow: row nowrap;
+  align-items: center;
+  gap: 0.5em;
 }
 
 .jump-links li img {
-    padding: 0;
-    margin: 0;
-    max-height: 2em;
-    display: none;
+  padding: 0;
+  margin: 0;
+  max-height: 2em;
+  display: none;
 }
 
 .jump-links li:hover {
-    border-color: #0f62fe;
+  border-color: #0f62fe;
 }
 
 .jump-links li a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-@media  screen and (max-width: 48em) {
-    .jump-links {
-        padding: 2em;
-        position: relative;
-        top: 0;
-    }
-    
-    .jump-links ul {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 1em;
-    }
+@media screen and (max-width: 48em) {
+  .jump-links {
+    padding: 2em;
+    position: relative;
+    top: 0;
+  }
 
-    .jump-links li img {
-        display: block;
-    }
+  .jump-links ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1em;
+  }
 
-    .jump-links li:hover {
-        border-color: white;
-    }
+  .jump-links li img {
+    display: block;
+  }
+
+  .jump-links li:hover {
+    border-color: white;
+  }
 }
 
-@media  screen and (max-width: 27em) {    
-    .jump-links ul {
-        display: flex;
-        flex-flow: column wrap;
-        gap: 0.2em;
-    }
+@media screen and (max-width: 27em) {
+  .jump-links ul {
+    display: flex;
+    flex-flow: column wrap;
+    gap: 0.2em;
+  }
 }
